Added new fields and refactor types to improve search engine

--- a/src/main/resources/data/i18n/messages_en_US.properties
+++ b/src/main/resources/data/i18n/messages_en_US.properties
@@ -1,31 +1,49 @@
+#
+#plugin "invoices"
+#
 
-#plugin "Facturas"
-
-label.factura.title=Title
-label.factura.description=Description
-label.factura.bill=Bill to
-label.factura.provider=Provider
-label.factura.number=Number
-label.factura.date=Date
-label.factura.subtotal=Subtotal
-label.factura.taxes=Taxes
-label.factura.total=Total
-label.factura.fac=Attachment
-label.factura.created=Created
-label.factura.factura=Invoice
-label.factura.state=State
-label.factura.content=Content
-label.factura.type=Type
-label.factura.accountspayable= Accounts Payable
-label.factura.issuedinvoices= Issued Invoices
-label.factura.billed=Billed
-label.factura.unpaid=Unpaid
-label.factura.paid=Paid
-label.factura.readytoship=Ready to Ship
-label.factura.fulfilled=Fulfilled
-label.factura.underpaid=Underpaid
-label.factura.merchant=Merchant
-label.factura.refunded=Refunded
-label.factura.invalid=Invalid
-
-
+label.invoice.billTo.code=Bill to (code)
+label.invoice.billTo.id=Bill to (id)
+label.invoice.content=Content
+label.invoice.created=Created
+label.invoice.description=Description
+label.invoice.date_created=Create date
+label.invoice.date_created.max=and
+label.invoice.date_created.min=Created between
+label.invoice.date_issued=Issued date
+label.invoice.date_issued.max=and
+label.invoice.date_issued.min=Issued between
+label.invoice.date_paid=Payment date
+label.invoice.date_paid.max=and
+label.invoice.date_paid.min=Paid from
+label.invoice.fac=Attachment
+label.invoice.invoice=Invoice
+label.invoice.issuer.code=Issuer (code)
+label.invoice.issuer.id=Issuer (id)
+label.invoice.number=Number
+label.invoice.state=State
+label.invoice.states.billed=Billed
+label.invoice.states.unpaid=Unpaid
+label.invoice.states.paid=Paid
+label.invoice.states.ready_to_ship=Ready to Ship
+label.invoice.states.fulfilled=Fulfilled
+label.invoice.states.underpaid=Underpaid
+label.invoice.states.merchant=Merchant
+label.invoice.states.refunded=Refunded
+label.invoice.states.invalid=Invalid
+label.invoice.subtotal=Subtotal
+label.invoice.subtotal.max=y
+label.invoice.subtotal.min=Subtotal between
+label.invoice.taxes=Taxes
+label.invoice.taxes.max=and
+label.invoice.taxes.min=Taxes between
+label.invoice.taxes_percent=% Taxes
+label.invoice.taxes_percent.max=and
+label.invoice.taxes_percent.min=% Taxes between
+label.invoice.title=Title
+label.invoice.total=Total
+label.invoice.total.max=and
+label.invoice.total.min=Total between
+label.invoice.type=Type
+label.invoice.types.accounts_payable= Accounts Payable
+label.invoice.types.issued_invoices= Issued Invoices
