--- a/src/main/resources/data/i18n/messages_es_ES.properties
+++ b/src/main/resources/data/i18n/messages_es_ES.properties
@@ -1,28 +1,49 @@
+#
+#plugin "invoices"
+#
 
-#plugin "Facturas"
-
-label.factura.title=Título
-label.factura.description=Descripción
-label.factura.bill=Factura a
-label.factura.provider=Proveedor
-label.factura.number=Número
-label.factura.date=Fecha
-label.factura.subtotal=Subtotal
-label.factura.taxes=Impuestos
-label.factura.total=Total
-label.factura.created=Creación
-label.factura.factura=Factura
-label.factura.state=Estado
-label.factura.content=Contenido
-label.factura.billed=Facturado
-label.factura.unpaid=No pagado
-label.factura.paid=Pagado
-label.factura.readytoship=Listo para entrega
-label.factura.fulfilled=Pedido entregado
-label.factura.underpaid=Pago Incorrecto
-label.factura.merchant=A revisión del proveedor
-label.factura.refunded=Pago devuelto
-label.factura.invalid=No válida
-label.factura.type=Tipo
-label.factura.accountspayable=Recibidas
-label.factura.issuedinvoices=Emitidas
+label.invoice.billTo.code=Proveedor (Código)
+label.invoice.billTo.id=Proveedor (identificador)
+label.invoice.content=Contenido
+label.invoice.created=Fecha de creación
+label.invoice.description=Descripción
+label.invoice.date_created=Fecha de creación
+label.invoice.date_created.max=y 
+label.invoice.date_created.min=Creado entre
+label.invoice.date_issued=Fecha de facturación
+label.invoice.date_issued.max=y
+label.invoice.date_issued.min=Facturado entre
+label.invoice.date_paid=Fecha de pago
+label.invoice.date_paid.max=y
+label.invoice.date_paid.min=Pagado entre
+label.invoice.fac=Adjunto
+label.invoice.invoice=Factura
+label.invoice.issuer.code=Facturador (código)
+label.invoice.issuer.id=Facturador (identificador)
+label.invoice.number=Número
+label.invoice.state=Estado
+label.invoice.states.billed=Facturado
+label.invoice.states.unpaid=No pagado
+label.invoice.states.paid=Pagado
+label.invoice.states.ready_to_ship=Preparado para entrega
+label.invoice.states.fulfilled=Pedido entregado
+label.invoice.states.underpaid=Pago incorrecto
+label.invoice.states.merchant=Pendiente de revisar
+label.invoice.states.refunded=Pago devuelto
+label.invoice.states.invalid=No válida
+label.invoice.subtotal=Subtotal
+label.invoice.subtotal.max=y
+label.invoice.subtotal.min=Subtotal entre
+label.invoice.taxes=IVA
+label.invoice.taxes.max=y
+label.invoice.taxes.min=IVA entre
+label.invoice.taxes_percent=% IVA
+label.invoice.taxes_percent.max=y
+label.invoice.taxes_percent.min=% IVA entre
+label.invoice.title=Título
+label.invoice.total=Total
+label.invoice.total.max=y
+label.invoice.total.min=Total entre
+label.invoice.type=Tipo
+label.invoice.types.accounts_payable=Recibidas
+label.invoice.types.issued_invoices=Emitidas
