Added new field "locator"

--- a/src/main/resources/data/i18n/messages_en_US.properties
+++ b/src/main/resources/data/i18n/messages_en_US.properties
@@ -20,6 +20,7 @@ label.invoice.fac=Attachment
 label.invoice.invoice=Invoice
 label.invoice.issuer.code=Issuer (code)
 label.invoice.issuer.id=Issuer (id)
+label.invoice.locator=Locator
 label.invoice.number=Number
 label.invoice.state=State
 label.invoice.states.billed=Billed
