--- a/src/main/resources/data/i18n/messages_es_ES.properties
+++ b/src/main/resources/data/i18n/messages_es_ES.properties
@@ -2,8 +2,8 @@
 #plugin "invoices"
 #
 
-label.invoice.billTo.code=Proveedor (Código)
-label.invoice.billTo.id=Proveedor (identificador)
+label.invoice.billTo.code=Receptor (Código)
+label.invoice.billTo.id=Receptor (identificador)
 label.invoice.content=Contenido
 label.invoice.created=Fecha de creación
 label.invoice.description=Descripción
@@ -20,6 +20,7 @@ label.invoice.fac=Adjunto
 label.invoice.invoice=Factura
 label.invoice.issuer.code=Facturador (código)
 label.invoice.issuer.id=Facturador (identificador)
+label.invoice.locator=Localizador
 label.invoice.number=Número
 label.invoice.state=Estado
 label.invoice.states.billed=Facturado
