New fields for arrival date and observations

--- a/src/main/resources/data/i18n/messages_en_US.properties
+++ b/src/main/resources/data/i18n/messages_en_US.properties
@@ -7,6 +7,9 @@ label.invoice.billTo.id=Bill to (id)
 label.invoice.content=Content
 label.invoice.created=Created
 label.invoice.description=Description
+label.invoice.date_arrived=Arrival date
+label.invoice.date_arrived.max=and
+label.invoice.date_arrived.min=Arrived between
 label.invoice.date_created=Create date
 label.invoice.date_created.max=and
 label.invoice.date_created.min=Created between
@@ -22,6 +25,7 @@ label.invoice.issuer.code=Issuer (code)
 label.invoice.issuer.id=Issuer (id)
 label.invoice.locator=Locator
 label.invoice.number=Number
+label.invoice.observations=Observations
 label.invoice.state=State
 label.invoice.states.billed=Billed
 label.invoice.states.unpaid=Unpaid
