--- a/src/main/resources/data/i18n/messages_es_ES.properties
+++ b/src/main/resources/data/i18n/messages_es_ES.properties
@@ -7,6 +7,9 @@ label.invoice.billTo.id=Receptor (identificador)
 label.invoice.content=Contenido
 label.invoice.created=Fecha de creación
 label.invoice.description=Descripción
+label.invoice.date_arrived=Fecha de recepción
+label.invoice.date_arrived.max=y
+label.invoice.date_arrived.min=Recibida entre
 label.invoice.date_created=Fecha de creación
 label.invoice.date_created.max=y 
 label.invoice.date_created.min=Creado entre
@@ -22,6 +25,7 @@ label.invoice.issuer.code=Facturador (código)
 label.invoice.issuer.id=Facturador (identificador)
 label.invoice.locator=Localizador
 label.invoice.number=Número
+label.invoice.observations=Observaciones
 label.invoice.state=Estado
 label.invoice.states.billed=Facturado
 label.invoice.states.unpaid=No pagado
